<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_one"
        android:title="Choice 1"
        android:icon="@drawable/googleearth24"
        android:orderInCategory="1"
        app:showAsAction="always" />
    <item android:id="@+id/action_two"
        android:title="Choice 2"
        android:icon="@drawable/googleimages24"
        android:orderInCategory="2"
        app:showAsAction="always" />
    <item android:id="@+id/action_three"
        android:title="Choice 3"
        android:icon="@drawable/googlenews24"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item android:id="@+id/settings"
...
