...
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/gold"
        />

    <EditText
        android:id="@+id/dialog_message_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
...
